[package]
name = "conquest_tiles"
version = "0.1.0"
authors = ["William Hart <hart.wl@gmail.com>"]
edition = "2018"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/bevy_wgpu",
]

[dependencies]
anyhow = "1"
bevy = { version = "0.5", default-features = false }
bevy_tilemap = "0.4"
ron = "0.6.4"
serde = { version = "1.0", features = ["derive"] }

[[example]]
name="editor"

[[example]]
name="simple_tiles"